--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Learning Node, Express and MongoDB",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start:dev": "nodemon server.js",
+    "start:prod": "SET NODE_ENV=production ;  nodemon server.js"
   },
   "author": "Mustafa Golec",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "morgan": "^1.10.0"
   }
