MongoDB and Mongoose Installation
Created MongoDB Atlas database.

Installed MongoDB and Mongoose components to the project.

Configured "npm start" coımmand

--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
 NODE_ENC=development
 PORT=3000
-USER=jonas
-PASSWORD=123456
+DATABASE=mongodb+srv://admin:<PASSWORD>@cluster0.8fikq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_PASSWORD=admin
