--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "Learning Node, Express and MongoDB",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon server.js",
+    "start": "nodemon server.js",
     "start:prod": "SET NODE_ENV=production ;  nodemon server.js"
   },
   "author": "Mustafa Golec",
   "license": "ISC",
   "dependencies": {
+    "5": "^0.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
+    "mongodb": "^6.12.0",
+    "mongoose": "^5.13.23",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
