--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "prettier": "^3.4.2"
+  },
+  "engines":{
+    "node": ">=10.0.0"
   }
 }
